@@ -102,7 +102,7 @@ $SIG{'INT'} = \&INT_handler;
 $SIG{'TERM'} = \&TERM_handler;
 
 # Create some variables for later use
-our (%rawcmds, %svsuid, %PROTO_SETTINGS, %COMMANDS, %HELP, %MODULE, %CMDTREE);
+our (%rawcmds, %svsuid, %svsnick, %PROTO_SETTINGS, %COMMANDS, %HELP, %MODULE, %CMDTREE);
 
 # Load the modules
 require Server::Events;
@@ -342,12 +342,7 @@ while (1) {
 					&{ $sub_ref }($USER, @bargv);
 				};	
 			} else {
-				if (!defined(config(lc($SERVICES_MSGSERVICE)))) {
-					# this usually shouldn't happen, but lets be safe, not sorry
-					serv_notice($SERVICES_MSGSERVICE, $USER, "Unknown command. Please see /msg $SERVICES_MSGSERVICE HELP for a list of commands.");
-				} else {
-					serv_notice($SERVICES_MSGSERVICE, $USER, "Unknown command. Please see /msg ".config(lc($SERVICES_MSGSERVICE), "nick")." HELP for a list of commands.");
-				}
+				serv_notice($SERVICES_MSGSERVICE, $USER, "Unknown command. Please see /msg ".$svsnick{lc($SERVICES_MSGSERVICE)}." HELP for a list of commands.");
 			}
 		}
     }
